[package]
name = "df_extras"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
approx = "0.5.1"
datafusion  = { version = "37.0.0" }
derivative = "2.2.0"
ipnet = "2.9.0"
libm = "0.2.8"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.198"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_json_path = "0.6.7"
tokio = { version = "1.37.0", features = ["macros", "rt", "parking_lot"] }

[features]
sqlite = []
postgres = []
