[package]
name = "df_extras_postgres"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
datafusion =  { workspace = true }
ipnet =  { workspace = true }
tokio =  { workspace = true }

[features]
postgres = []
